# rdb-package-info

./: .gitignore  README.md  conftest.py  main.py  mkdocs.yml  rdb-comparison.sh  rdb-package-info.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: index.md
modules/: comparator.py  constants.py  fetcher.py  utils.py
modules/commands/: base.py  compare.py
modules/entities/: comparison.py  package.py
rdb_package_info/: main.py
rdb_package_info/modules/: comparator.py  constants.py  fetcher.py  utils.py
rdb_package_info/modules/commands/: compare.py
rdb_package_info/modules/entities/: architecture.py  comparison.py  package.py
rdb_package_info/tests/: test_comparators.py  test_utils.py
rdb_package_info/tests/fixtures/: factories.py
tests/: test_comparators.py  test_utils.py
tests/fixtures/: factories.py
