[metadata]
name = rdb-package-info
version = 1.0

[options]
install_requires =
    requests ~= 2.25.1
    typing_extensions ~= 4.0.1
    attrs ~= 21.4.0
    pytest ~= 6.2.4
    ijson ~= 3.1.4

packages = find_namespace:

[options.entry_points]
console_scripts =
    rdb-comparison = rdb_package_info.main:main

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    rdb_package_info
